--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ a {
 					<ul class="nav-items nav-expand-content">
 						<li class="nav-item">
 							<a class="nav-link" href="#">
-<img class="fit-picture" src="ch3ticons/ps1/covers/007racing.jpg" height=128 width=128>	
+<img class="fit-picture" src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/covers/007racing.jpg" height=128 width=128>	
 								
 							</a>
 						</li>
