--- a/index.html
+++ b/index.html
@@ -1,84 +1,19 @@
-
 <!DOCTYPE html>
 <html lang='en' class=''>
 
 <head>
   <meta charset='UTF-8'>
-  <title>Ch3at Book</title>
-
- 
- 
-
-  
-  
+  <title>Ch3at Book</title>  
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-
   <style class="INLINE_PEN_STYLESHEET_ID">
     @import "https://fonts.googleapis.com/css?family=Fira+Sans:300,400";
 @import "https://fonts.googleapis.com/icon?family=Material+Icons";
 * {
-  box-sizing: border-box;
-}
-body {
-  background-color: #000000;
-  font-family: "Fira Sans", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.875em;
-}
-
-body::after {
-  content: "";
-  position: absolute;
-  z-index: 99;
-  background-color: rgba(0, 0, 0, 0.8);
-  height: 100vh;
-  width: 100vw;
-  transition: 0.4s;
-  opacity: 0;
-  visibility: hidden;
-}
-
-a {
-  text-decoration: none;
-}
-
-.nav-top {
-  display: flex;
-  align-items: center;
+.nav-drill {
   position: fixed;
-  z-index: 101;
-  padding: 10px 20px;
+  top: 20px;
   width: 100%;
-  height: 50px;
-  background-color: #A7A7A7;
-}
-.nav-top .hamburger {
-  margin-left: auto;
-  color: #707070;
-  cursor: pointer;
-}
-
-.nav-drill {
-  margin-top: 50px;
-  transform: translateX(100%);
-}
-
-.nav-is-toggled .nav-drill {
-  transform: translateX(0);
-}
-.nav-is-toggled::after {
-  opacity: 1;
-  visibility: visible;
-}
-
-.nav-drill {
-  display: flex;
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  right: 0;
-  width: 250px;
-  height: 100vh;
+  height: 100%; 
   background-color: #000000;
   overflow-y: auto;
   overflow-x: hidden;
@@ -89,7 +24,7 @@ a {
   flex: 0 0 100%;
 }
 .nav-item:not(:last-child) {
-  border-bottom: solid 1px #A7A7A7;
+
 }
 .nav-link {
   display: block;
@@ -102,30 +37,19 @@ a {
 }
 .nav-expand-content {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 0px;
   width: 100%;
   height: 100%;
-  transform: translateX(100%);
-  background-color: #A7A7A7;
+  transform: translateX(100%); 
   transition: 0.3s;
   visibility: hidden;
 }
-.nav-expand-content .nav-item:not(:last-child) {
-  border-bottom: solid 1px #A7A7A7;
-}
-.nav-expand-content .nav-link {
-  background-color: #A7A7A7
-}
 .nav-expand-content .nav-back-link {
   display: flex;
-  align-items: center;
-  background-color: #707070 !important;
-  color: #fff;
+  background-color: #661400 !important;
 }
 .nav-expand-content .nav-back-link::before {
   content: "chevron_left";
-  margin-right: 0.5em;
   font-family: "Material Icons";
 }
 .nav-expand-link {
@@ -134,7 +58,7 @@ a {
 }
 .nav-expand-link::after {
   content: "chevron_right";
-  flex: 0 1 auto;
+
   font-family: "Material Icons";
 }
 .nav-expand.active > .nav-expand-content {
@@ -153,29 +77,22 @@ a {
 .nav-expand .nav-expand-content .nav-expand-content .nav-link {
   background-color: #A7A7A7;
 }
-.nav-expand .nav-expand-content .nav-expand-content .nav-expand-content {
-  background-color: #FF0000;
-}
 .nav-expand .nav-expand-content .nav-expand-content .nav-expand-content .nav-link {
   background-color: #FF0000;
 }
 .nav-expand .nav-expand-content .nav-expand-content .nav-expand-content .nav-expand-content {
-  background-color: #FF0000;
 }
 .nav-expand .nav-expand-content .nav-expand-content .nav-expand-content .nav-expand-content .nav-link {
-  background-color: #FF0000;
 }
-
+  text-decoration: none;
   </style>
-</head>
-
-<body class="nav-is-toggled">
-  <header class="nav-top"> <marquee>Welcome to the Ch3at Book</marquee> 
-	<span class="hamburger material-icons" id="ham">menu</span>
-</header>
+<font color="#FFFFFF">
+<marquee>Welcome to the Ch3at Book</marquee></font>  
 <nav class="nav-drill">
-    
-    
+<body style="background-color:#000000;">
+   
+
+
 <!--START PS1 CATALOG-->    
 	<ul class="nav-items nav-level-1">
 		<li class="nav-item nav-expand">
