--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 <!--End Header-->
 <!--ps2 Game 1 Cheats Start-->
       <ul>
-        <li><label>(PX)(PO)(T)(SQ)(UP)(DOWN)(LEFT)(RIGHT)(PSTART)(PSELECT)(PL1)(PL2)(PL3)(PR1)(PR2)(PR3) </label></li>
+        <li><label>(PX)(PO)(T)(SQ)(UP)(DOWN)(LEFT)(RIGHT)(PSTART)(PSELECT)(PL1)(PL2)(L3)(PR1)(PR2)(R3) </label></li>
       </ul>
     </div>
   </li>
@@ -379,7 +379,7 @@
     const contentDiv = document.querySelector(".wrapper");
     if (contentDiv) {
       const contentHTML = contentDiv.innerHTML;
-      const replacedHTML = contentHTML.replace(/\(PL3\)/g, '<img class="fit-picture" src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/L3.png" height=32 width=32>');
+      const replacedHTML = contentHTML.replace(/\(L3\)/g, '<img class="fit-picture" src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/L3.png" height=32 width=32>');
       contentDiv.innerHTML = replacedHTML;
     }
   });
@@ -415,7 +415,7 @@
     const contentDiv = document.querySelector(".wrapper");
     if (contentDiv) {
       const contentHTML = contentDiv.innerHTML;
-      const replacedHTML = contentHTML.replace(/\(PR3\)/g, '<img class="fit-picture" src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/r3.png" height=32 width=32>');
+      const replacedHTML = contentHTML.replace(/\(R3\)/g, '<img class="fit-picture" src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/r3.png" height=32 width=32>');
       contentDiv.innerHTML = replacedHTML;
     }
   });
