--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
 
 .masked-text {
       position: relative;
-      font-size: 28px;
+      font-size: 20px;
       font-weight: bold;
       background-image: url("https://hv-leaf.github.io/Ch3at/ch3ticons/backend/code.gif");
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
       letter-spacing: 4px;
-      background-size: 128px auto;
+      background-size: 128px 128px;
       background-repeat: repeat;
       animation: scrollText 15s linear infinite;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Initial shadow position and color */
