--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     padding: 0;
     margin: 0;
   }
+
+ img {
+  pointer-events: none;
+}
+ 
   body {
      user-select: none;
   -webkit-user-select: none;
