added ps1 3d bouncing ball puzzle

--- a/index.html
+++ b/index.html
@@ -1462,8 +1462,29 @@ Have Fists Skate Board</p></td>
       <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
       <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul><li><label>
 <art>(ps1game10)</art>
-(Cheat codes Coming Soon...)
-            
+<p style="margin-bottom: 0;">Gameshark Codes</p> 
+<table border="0" cellpadding="0" cellspacing="0">
+<tr>
+<td style="padding: 0; line-height: 1;"><p style="color: red; margin: 0;">Joker Command:</p></td>
+        <td style="padding: 10px 0 0 20px; line-height: 1;"><p class="masked-text" style="font-size: 13px; margin: 0;">D018B598 ????</p></td>
+</tr>
+
+<tr>
+<td style="padding: 0; line-height: 1;"><p style="color: red; margin: 0;">Lives Modifier:</p></td>
+        <td style="padding: 10px 0 0 20px; line-height: 1;"><p class="masked-text" style="font-size: 13px; margin: 0;">8018B2F4 00??</p></td>
+</tr>
+
+<tr>
+<td style="padding: 0; line-height: 1;"><p style="color: red; margin: 0;">Puzzle Meter Modifier:</p></td>
+        <td style="padding: 10px 0 0 20px; line-height: 1;"><p class="masked-text" style="font-size: 13px; margin: 0;">8018B396 00??</p></td>
+</tr>
+
+<tr>
+<td style="padding: 0; line-height: 1;"><p style="color: red; margin: 0;">Score Modifier:</p></td>
+        <td style="padding: 10px 0 0 20px; line-height: 1;"><p class="masked-text" style="font-size: 13px; margin: 0;">801677BC 00??</p></td>
+</tr>
+
+</table>            
 </label></li></ul></div></li>
 
 <!-- End PS1 Template -->
