--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul>
 <PS1art1>(ps1game4)</PS1art1><li><label>
 <label style="text-align: left;">
-<p style="margin-bottom: -25px;">Gameshark Codes</p>
+<p class="greencode">Gameshark Codes</p>
 <table border="0" cellpadding="0" cellspacing="0">
 
 <tr><td style="padding: 0; line-height: 3;"><p class="redcode">P1 Scores Easily:</p></td>
@@ -552,7 +552,7 @@
 <p style="margin-bottom; margin: 0;">Unlimited Lives</p>
 <p style="margin-bottom: -15px;">(PSTART)(PL1)(PR2)(SQ)(PO)(PR2)(PL2)(PL1)(PR1)</p>
 
-<p style="margin-bottom: -25px;">Gameshark Codes</p>
+<p class="greencode">Gameshark Codes</p>
 <table border="0" cellpadding="0" cellspacing="0">
 
 <tr><td style="padding: 0; line-height: 3;"><p class="redcode">Infinite Lives:</p></td>
