--- a/index.html
+++ b/index.html
@@ -2082,10 +2082,10 @@ End PS1 Template -->
 </li>
 <!-- End Playstation 2 system -->
 
-<!-- New PlayStation 3 option 
+<!-- PlayStation 3 system -->
 <li>
   <label class="a-label__chevron" for="ps3">
-    <img src="https://example.com/ps3/logo.png" height=32 width=128> PlayStation 3
+    <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps3/logo.png" height=32 width=128> PlayStation 3
   </label>
   <input type="checkbox" id="ps3" name="ps3" class="m-menu__checkbox">
   <div class="m-menu">
@@ -2093,22 +2093,19 @@ End PS1 Template -->
       <label class="m-menu__toggle" for="ps3">
         <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg>
       </label>
-      <span><img src="https://example.com/ps3/logo.png" height=32 width=128></span>
+      <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps3/logo.png" height=32 width=128></span>
     </div>
     <ul>
-      <!-- PS3 Template
-      ... Add your PS3 game options ...
-      End PS3 Template 
-    </ul>
-  </div>
-</li>
-End New PlayStation 3 option -->
+    
+      <!-- PS3 cats -->
 
-<!-- Closing tags for ul, div, nav, and div -->
+
 </ul>
 </div>
 </nav>
 </div>
+<!-- End PlayStation 3 system -->
+
 
 <script>
   document.addEventListener('copy', function (e) {
