--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
 <p class="greencode" style="display: inline; vertical-align: middle;">Welcome to the Ch3at Book</p></font></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
 
+
 <!-- Microsoft Company -->
 <li>
   <label class="a-label__chevron" for="microsoft">
@@ -10665,13 +10666,13 @@ Have Fists Skate Board</p></td>
 
 <!-- PS1 40 Winks-->
       <li>
-      <label class="a-label__chevron" for="ps1-gx">
+      <label class="a-label__chevron" for="ps1-g11">
       <PS1art2>(ps1game11)</PS1art2> 40 Winks
       </label></li><li>
-      <input type="checkbox" id="ps1-gx" name="ps1" class="m-menu__checkbox">
+      <input type="checkbox" id="ps1-g11" name="ps1" class="m-menu__checkbox">
       <div class="m-menu">
       <div class="m-menu__header">
-      <label class="m-menu__toggle" for="ps1-gx">
+      <label class="m-menu__toggle" for="ps1-g11">
       <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
       <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul><li><label>
 <PS1art2>(ps1game11)</PS1art2>
@@ -10745,6 +10746,35 @@ then hold (PSelect) and press (Down)(PR2)(PL1)(Up)(PR2)</p>
 <br></br>
 </label></li></ul></div></li>
 <!-- End PS1 40 Winks -->
+
+<!-- PS1 4th Super Robot Wars Scramble-->
+      <li>
+      <label class="a-label__chevron" for="ps1-g12">
+      <PS1art2>(ps1game12)</PS1art2> 4th Super Robot Wars Scramble
+      </label></li><li>
+      <input type="checkbox" id="ps1-g12" name="ps1" class="m-menu__checkbox">
+      <div class="m-menu">
+      <div class="m-menu__header">
+      <label class="m-menu__toggle" for="ps1-g12">
+      <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg></label>
+      <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=48 width=48></span></div><ul><li><label>
+<PS1art2>(ps1game12)</PS1art2>
+
+<p style="margin-bottom: -25px;">Reset game</p>
+<p class="greencode">While playing, press (PL1)(PL2)(PR1)(PR2)(PSELECT)(PSTART)</p>
+
+<p class="greencode">Gameshark Codes</p>
+<table border="0" cellpadding="0" cellspacing="0">
+<tr><td style="padding: 0; line-height: 1;"><p class="redcode">Infinite Money:</p></td>
+        <td style="padding: 10px 0 0 20px; line-height: 1;"><p class="greencode">801048C4 967F</p></td>
+    </tr><tr>
+<td style="padding: 0; line-height: 1;"></td>
+<td style="padding: 10px 0 0 20px; line-height: 1;"><p class="greencode">801048C6 0098</p></td></tr>
+<tr> <td></td> </tr><tr> <td></td> </tr>
+</table> 
+<br></br>
+</label></li></ul></div></li>
+<!-- End PS1 4th Super Robot Wars Scramble -->
 
 
 <!-- PS1 Template
@@ -14090,7 +14120,6 @@ End PS1 Template -->
   </div>
 </li>
 <!-- End Sony Company -->
-
 
 <script>
   document.addEventListener('copy', function (e) {
