--- a/index.html
+++ b/index.html
@@ -14238,23 +14238,51 @@ paragraph.innerHTML = text.replace(regex, (match, psbuttonName) => {
     replaceTextWithalphabetArt();
   </script>
   
-     <script>
-        const combinedButton = document.getElementById("combinedButton");
-        const wrapper = document.querySelector(".wrapper");
-        let isDarkMode = false;
+  <script>
+    const combinedButton = document.getElementById("combinedButton");
+    const wrapper = document.querySelector(".wrapper");
+    let isDarkMode = false;
 
-        combinedButton.addEventListener("click", () => {
-            isDarkMode = !isDarkMode;
-            wrapper.classList.toggle("dark-mode", isDarkMode);
+    // Check if a "darkMode" cookie exists and set the initial mode accordingly
+    const darkModeCookie = getCookie("darkMode");
+    if (darkModeCookie) {
+      isDarkMode = darkModeCookie === "true";
+      wrapper.classList.toggle("dark-mode", isDarkMode);
+      combinedButton.innerHTML = isDarkMode ? "☀️" : "🌙";
+    }
 
-            // Change button text and emoji
-            if (combinedButton.innerHTML === "🌙") {
-                combinedButton.innerHTML = "☀️";
-            } else {
-                combinedButton.innerHTML = "🌙";
-            }
-        });
-    </script>
+    combinedButton.addEventListener("click", () => {
+      isDarkMode = !isDarkMode;
+      wrapper.classList.toggle("dark-mode", isDarkMode);
+      combinedButton.innerHTML = isDarkMode ? "☀️" : "🌙";
+
+      // Set a "darkMode" cookie to remember the user's preference
+      setCookie("darkMode", isDarkMode);
+
+      // Save the state of the button to localStorage
+      localStorage.setItem("buttonState", isDarkMode ? "night" : "day");
+    });
+
+    // Function to get a cookie's value
+    function getCookie(name) {
+      const value = `; ${document.cookie}`;
+      const parts = value.split(`; ${name}=`);
+      if (parts.length === 2) return parts.pop().split(";").shift();
+    }
+
+    // Function to set a cookie
+    function setCookie(name, value) {
+      document.cookie = `${name}=${value}; path=/`;
+    }
+    
+    // Check localStorage for button state on page load
+    const savedButtonState = localStorage.getItem("buttonState");
+    if (savedButtonState) {
+      isDarkMode = savedButtonState === "night";
+      wrapper.classList.toggle("dark-mode", isDarkMode);
+      combinedButton.innerHTML = isDarkMode ? "☀️" : "🌙";
+    }
+  </script>
 
 <!--PS1 Cover Art Starts Here -->
   <script>
