--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 <!-- Xbox -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/xbox.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/xbox.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -261,7 +261,7 @@
 <!-- Xbox 360 -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/xbox360.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox360/xbox360.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox360/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -276,7 +276,7 @@
 <!-- Xbox One -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/xboxone.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/xboxone/xboxone.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xboxone/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -311,7 +311,7 @@
 <!-- NES -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/nes.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/nes/nes.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/nes/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -326,7 +326,7 @@
 <!-- Gameboy -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/gb.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gb/gb.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gb/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -341,7 +341,7 @@
 <!-- SNES -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/snes.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/snes/snes.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/snes/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -356,7 +356,7 @@
 <!-- N64 -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/n64.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/n64/n64.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/n64/logo.png" height=64 width=64>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -371,7 +371,7 @@
 <!-- Gameboy Color -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/gbc.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gbc/gbc.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gbc/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -386,7 +386,7 @@
 <!-- Gameboy Advance -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/gba.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gba/gba.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gba/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -401,7 +401,7 @@
 <!-- GameCube -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/gamecube.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamecube/gamecube.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamecube/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -416,7 +416,7 @@
 <!-- DS -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/ds.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ds/ds.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ds/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -431,7 +431,7 @@
 <!-- Wii -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/wii.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wii/wii.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wii/logo.png" height=32 width=80>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -446,7 +446,7 @@
 <!-- 3DS -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/3ds.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/3ds/3ds.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/3ds/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -461,7 +461,7 @@
 <!-- Wii U -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/wiiu.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/wiiu/wiiu.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/wiiu/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -476,7 +476,7 @@
 <!-- Switch -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/switch.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/switch/switch.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/switch/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -510,7 +510,7 @@
 <!-- Genesis -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/genesis.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/genesis/genesis.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/genesis/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -525,7 +525,7 @@
 <!-- Game Gear -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/gamegear.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/gamegear/gamegear.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/gamegear/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -540,7 +540,7 @@
 <!-- Saturn -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/saturn.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/saturn/saturn.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/saturn/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -555,7 +555,7 @@
 <!-- DreamCast -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/dreamcast.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/dreamcast/dreamcast.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/dreamcast/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -590,7 +590,7 @@
 <!-- PS1 -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/ps1.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps1/ps1.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps1/logo.png" height=64 width=64>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -605,7 +605,7 @@
 <!-- PS2 -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/ps2.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps2/ps2.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps2/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -620,7 +620,7 @@
 <!-- PSP -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/psp.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psp/psp.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psp/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -635,7 +635,7 @@
 <!-- PS3 -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/ps3.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps3/ps3.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps3/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -650,7 +650,7 @@
 <!-- PS Vita -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/psvita.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/psvita/psvita.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/psvita/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -665,7 +665,7 @@
 <!-- PS4 -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/ps4.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps4/ps4.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps4/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
@@ -680,7 +680,7 @@
 <!-- PS5 -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/ps5.html">
+   <a href="https://hv-leaf.github.io/Ch3at/pages/ps5/ps5.html">
   <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/ps5/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
