--- a/pages/microsoft.html
+++ b/pages/microsoft.html
@@ -112,6 +112,34 @@
         outline: none;
     }
 </style>
+
+
+
+<style>  
+.greencode {
+      position: relative;
+      font-size: 13px;
+      margin: 0;
+      font-weight: bold;
+      background-image: url("https://hv-leaf.github.io/Ch3at/ch3ticons/backend/code.gif");
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      letter-spacing: 4px;
+      background-size: 128px 128px;
+      background-repeat: repeat;
+      animation: scrollText 2s linear infinite;
+    }
+
+    @keyframes scrollText {
+      0% {
+        background-position: 0 100%;
+      }
+      100% {
+        background-position: 0 0;
+      }
+    }
+    </style>
   
   <style>
     .alphabet {
@@ -119,7 +147,7 @@
       height: 64px;
       background-image: url('https://hv-leaf.github.io/Ch3at/ch3ticons/backend/ALPHABET.png');   
   </style>
-  
+
 </head>
 
 <!-- HTML Starts -->
@@ -130,22 +158,19 @@
       <input type="checkbox" id="menu" name="menu" class="m-menu__checkbox" checked>
 <div class="m-menu">
 <div class="m-menu__header">
-<a href="https://hv-leaf.github.io/Ch3at/pages/microsoft.html" rel="noopener noreferrer">
+<a href="https://hv-leaf.github.io/Ch3at/" rel="noopener noreferrer">
   <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs">
     <path d="M19 12H6M12 5l-7 7 7 7"/>
   </svg>
 </a>
-
-<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
+<span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/microsoft.png" height=32 width=128></span><button id="combinedButton">🌙</button> </div><ul>
         <!-- Catalog starts here -->   
 
-
-
-<!-- Xbox # -->
+<!-- Xbox -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/09.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(#)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/xbox.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -154,14 +179,13 @@
     </a>
     </ul>
 </li>
-<!-- End Xbox #-->
+<!-- End Xbox -->
 
-
-<!-- Xbox a -->
+<!-- Xbox 360 -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/a.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(a)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox360/xbox360.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox360/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -170,13 +194,13 @@
     </a>
     </ul>
 </li>
-<!-- End Xbox a-->
+<!-- End Xbox 360 -->
 
-<!-- Xbox b -->
+<!-- Xbox One -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/b.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(b)</alph>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/xboxone/xboxone.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xboxone/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -185,372 +209,12 @@
     </a>
     </ul>
 </li>
-<!-- End Xbox b-->
+<!-- End Xbox One -->
 
-<!-- Xbox c -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/c.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(c)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox c-->
-
-<!-- Xbox d -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/d.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(d)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox d-->
-<!-- Xbox e -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/e.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(e)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox e-->
-
-<!-- Xbox f -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/f.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(f)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox f-->
-
-<!-- Xbox g -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/g.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(g)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox g-->
-
-<!-- Xbox h -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/h.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(h)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox h-->
-
-<!-- Xbox i -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/i.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(i)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox i-->
-
-<!-- Xbox j -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/j.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(j)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox j-->
-
-<!-- Xbox k -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/k.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(k)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox k-->
-
-<!-- Xbox l -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/l.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(l)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox l-->
-
-<!-- Xbox m -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/m.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(m)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox m-->
-
-<!-- Xbox n -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/n.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(n)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox n-->
-
-<!-- Xbox o -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/o.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(o)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox o-->
-
-<!-- Xbox p -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/p.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(p)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox p-->
-
-<!-- Xbox q -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/q.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(q)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox q-->
-
-<!-- Xbox r -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/r.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(r)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox r-->
-
-<!-- Xbox s -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/s.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(s)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox s-->
-
-<!-- Xbox t -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/t.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(t)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox t-->
-
-<!-- Xbox u -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/u.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(u)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox u-->
-
-<!-- Xbox v -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/v.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(v)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox v-->
-
-<!-- Xbox w -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/w.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(w)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox w-->
-
-<!-- Xbox x -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/x.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(x)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox x-->
-
-<!-- Xbox y -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/y.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(y)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox y-->
-
-<!-- Xbox z -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/z.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128> <alph>(z)</alph>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox z-->
-
-
-      
- <br></br><br></br></ul>
+    <br></br><br></br></ul>
   </div>
 </li>
+<!-- End Microsoft Company -->
 
 <script>
   document.addEventListener('copy', function (e) {
@@ -568,62 +232,6 @@ document.addEventListener('contextmenu', function (e) {
   e.preventDefault();
 });
 </script>
-
-<script>
-    const alphabetArtMapping = {
-      '#': { start: 0, end: 64 },
-      'a': { start: 64, end: 128 },
-      'b': { start: 128, end: 192 },
-      'c': { start: 192, end: 256 },
-      'd': { start: 256, end: 320 },
-      'e': { start: 320, end: 384 },
-      'f': { start: 384, end: 448 },
-      'g': { start: 448, end: 512 },
-      'h': { start: 512, end: 576 },
-      'i': { start: 576, end: 640 },
-      'j': { start: 640, end: 704 },
-      'k': { start: 704, end: 768 },
-      'l': { start: 768, end: 832 },
-      'm': { start: 832, end: 896 },
-      'n': { start: 896, end: 960 },
-      'o': { start: 960, end: 1024 },
-      'p': { start: 1024, end: 1088 },
-      'q': { start: 1088, end: 1152 },
-      'r': { start: 1152, end: 1216 },
-      's': { start: 1216, end: 1280 },
-      't': { start: 1280, end: 1344 },
-      'u': { start: 1344, end: 1408 },
-      'v': { start: 1408, end: 1472 },
-      'w': { start: 1472, end: 1536 },
-      'x': { start: 1536, end: 1600 },
-      'y': { start: 1600, end: 1664 },
-      'z': { start: 1664, end: 1728 },
-      
-    };
-
-    function replaceTextWithalphabetArt() {
-      const paragraphs = document.getElementsByTagName('alph');
-
-      Array.from(paragraphs).forEach(paragraph => {
-        const text = paragraph.innerText;
-        const regex = /\((#|a|b|c|d|e|f|g|h|i|j|k|l|m|n|o|p|q|r|s|t|u|v|w|x|y|z)\)/ig;
-
-        paragraph.innerHTML = text.replace(regex, (match, alphimg) => {
-          const alphabetData = alphabetArtMapping[alphimg.toLowerCase()];
-          if (alphabetData !== undefined) {
-            const alphabetElement = document.createElement('div');
-            alphabetElement.classList.add('alphabet');
-            alphabetElement.style.backgroundPosition = `-${alphabetData.start}px 0`;
-            alphabetElement.style.width = `${alphabetData.end - alphabetData.start}px`;
-            return alphabetElement.outerHTML + ' ';
-          }
-          return match; // If no mapping found, keep the original text
-        });
-      });
-    }
-
-    replaceTextWithalphabetArt();
-  </script>
   
   <script>
     const combinedButton = document.getElementById("combinedButton");
@@ -670,5 +278,6 @@ document.addEventListener('contextmenu', function (e) {
       combinedButton.innerHTML = isDarkMode ? "☀️" : "🌙";
     }
   </script>
+
 </body>
 </html>
