--- a/index.html
+++ b/index.html
@@ -164,25 +164,14 @@
 
 
 <!-- Microsoft Company -->
-<li>
-  <label class="a-label__chevron" for="microsoft">
-    <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/microsoft.png" height=32 width=128>
-  </label>
-  <input type="checkbox" id="microsoft" name="microsoft" class="m-menu__checkbox">
-  <div class="m-menu">
-    <div class="m-menu__header">
-      <label class="m-menu__toggle" for="microsoft">
-        <svg width="35" height="35" viewBox="0 0 24 24" fill="none" stroke="#000000" stroke-width="2" stroke-linecap="butt" stroke-linejoin="arcs"><path d="M19 12H6M12 5l-7 7 7 7"/></svg>
-      </label>
-      <span><img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/microsoft.png" height=32 width=128></span>
-    </div>
-    <ul>
 
-<!-- Xbox -->
+ 
+
+<!-- Xbox Microsoft -->
 <li>
   <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox/xbox.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox/logo.png" height=32 width=128>
+   <a href="https://hv-leaf.github.io/Ch3at/pages/microsoft.html">
+  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/backend/microsoft.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
   </label>
@@ -191,42 +180,14 @@
     </a>
     </ul>
 </li>
-<!-- End Xbox -->
-
-<!-- Xbox 360 -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xbox360/xbox360.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xbox360/logo.png" height=32 width=128>
   <div class="m-menu">
     <div class="m-menu__header">
-  </label>
     </div>
     <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox 360 -->
-
-<!-- Xbox One -->
-<li>
-  <label>
-   <a href="https://hv-leaf.github.io/Ch3at/pages/xboxone/xboxone.html">
-  <img src="https://hv-leaf.github.io/Ch3at/ch3ticons/xboxone/logo.png" height=32 width=128>
-  <div class="m-menu">
-    <div class="m-menu__header">
-  </label>
-    </div>
-    <ul>
-    </a>
-    </ul>
-</li>
-<!-- End Xbox One -->
-
-    <br></br><br></br></ul>
   </div>
 </li>
 <!-- End Microsoft Company -->
+
 
 <!-- Nintendo Company-->
 <li>
